white BG behind journal posts, fixed section titles' styles

--- a/src/Components/MyCalendar/myCalendar.scss
+++ b/src/Components/MyCalendar/myCalendar.scss
@@ -9,5 +9,6 @@
 
   h1 {
     text-decoration: underline;
+    font-family: 'Berkshire Swash', cursive;
   }
 }
